# rda-dsspellchecker

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml
src/dsspellchecker/: __init__.py  db_utils.py  utils.py
src/dsspellchecker/dictionary/: acronyms.lst  exact_others.lst  file_exts.lst  general.lst  names.lst  places.lst  unit_abbrevs.lst
tests/: test_spellcheck.py  test_validate_word.py
