[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsspellchecker"
version = "2.2.4"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "libpkg @ git+https://github.com/rda-dattore/testpkg#subdirectory=libpkg",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
dsspellchecker_manage = "dsspellchecker.db_utils:dsspellchecker_manage"

[tool.setuptools.package-data]
dsspellchecker = ["dictionary/*.lst", "dictionary/valids.db"]
